Replace URL constructor with URI().toURL() pattern
Changed all instances of new URL(string) to new URI(string).toURL()
to address deprecation warnings and follow modern Java best practices.

Changes:
- LTIRegistration.java: 7 instances updated
- Deployment.java: 4 instances updated
- LTIRequest.java: 1 instance updated
- Token.java: 1 instance updated

Added import java.net.URI to all affected files.